objects/ssot__ActionPlan__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionPlanState__c</fullName>
        <label>Action Plan State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionPlanTemplateVersionId__c</fullName>
        <label>Action Plan Template Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionPlanType__c</fullName>
        <label>Action Plan Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionPlan_TargetId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlan_TargetId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ActionPlan_TargetId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>ActionPlan_TargetId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ActionPlan_TargetId_map_Campaign_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlan_TargetId_map_Campaign_Id_N_1</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>ActionPlan_TargetId_map_Campaign_Id_N_1</relationshipLabel>
        <relationshipName>ActionPlan_TargetId_map_Campaign_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ActionPlan_TargetId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlan_TargetId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>ActionPlan_TargetId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>ActionPlan_TargetId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ActionPlan_TargetId_map_Program_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlan_TargetId_map_Program_Id_N_1</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>ActionPlan_TargetId_map_Program_Id_N_1</relationshipLabel>
        <relationshipName>ActionPlan_TargetId_map_Program_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ActualEndDate__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualStartDate__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Action Plan Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsUsingHolidayHours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Using Holiday Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordCreationType__c</fullName>
        <label>Record Creation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecurringScheduleId__c</fullName>
        <label>Recurring Schedule</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduleFrequencyText__c</fullName>
        <label>Schedule Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StatusCode__c</fullName>
        <label>Status Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetId__c</fullName>
        <label>Target</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetObject__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818171089_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlan_ActionPlanTemplateVersion_rel</label>
        <referenceTo>ssot__ActionPlanTemplateVersion__dlm</referenceTo>
        <relationshipLabel>ActionPlan_ActionPlanTemplateVersion_rel</relationshipLabel>
        <relationshipName>rel_1719818171089_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818622270_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlan_TargetId_map_ApplicationD_rel</label>
        <referenceTo>ssot__ApplicationDecision__dlm</referenceTo>
        <relationshipLabel>ActionPlan_TargetId_map_ApplicationD_rel</relationshipLabel>
        <relationshipName>rel_1719818622270_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819473617_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlan_TargetId_map_BenefitAssig_rel</label>
        <referenceTo>ssot__BenefitAssignment__dlm</referenceTo>
        <relationshipLabel>ActionPlan_TargetId_map_BenefitAssig_rel</relationshipLabel>
        <relationshipName>rel_1719819473617_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>